--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Title</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -15,7 +16,20 @@
     <![endif]-->
   </head>
   <body>
-    
+    <div class="container">
+      <!-- Header start -->
+      <div class="row">
+        <div class="col-md-6">
+          <img class="img-responsive img-circle logo" src="http://placehold.it/100x100" alt="Logo">
+        </div>
+        <div class="col-md-6 text-right">
+          <h1>Tobias</h1>
+          <h5>Student</h5>
+        </div>
+        <hr>
+      </div>
+      <!-- Header end -->
+    </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
