--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@
         <hr>
       </div>
       <!-- Header end -->
+
+      <!-- Header-Content separator start --->
+      <div class="row">
+        <div clas="col-md-12">
+          <hr>
+        </div>
+      </div>
+      <!-- Header-content separator end -->
+
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
