--- a/index.html
+++ b/index.html
@@ -38,6 +38,14 @@
       </div>
       <!-- Header-content separator end -->
 
+      <!-- Banner start -->
+      <div class="row">
+        <div clsas="col-md-12">
+          <img class="img-responsive" src="http://placehold.it/1200x450" alt="Banner">
+        </div>
+      </div>
+      <!-- Banner end -->
+
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
