Add featured work header

--- a/index.html
+++ b/index.html
@@ -46,6 +46,14 @@
       </div>
       <!-- Banner end -->
 
+      <!-- Featured work header start -->
+      <div class="row">
+        <div class="col-md-12">
+          <h2>Featured Work</h2>
+        </div>
+      </div>
+      <!-- Featured work header end -->
+
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
