Add featured work content

--- a/index.html
+++ b/index.html
@@ -49,10 +49,38 @@
       <!-- Featured work header start -->
       <div class="row">
         <div class="col-md-12">
-          <h2>Featured Work</h2>
+          <h2 class="text-left">Featured Work</h2>
         </div>
       </div>
       <!-- Featured work header end -->
+
+      <!-- Featured work content start -->
+      <div class="row">
+        <div class="col-md-4">
+          <img class="img-responsive" src="http://placehold.it/400x250" alt="First project">
+
+          <h3 class="text-uppercase">First project</h3>
+
+          <p>Link</p>
+        </div>
+
+        <div class="col-md-4">
+          <img class="img-responsive" src="http://placehold.it/400x250" alt="Second project">
+
+          <h3 class="text-uppercase">Second project</h3>
+
+          <p>Link</p>
+        </div>
+
+        <div class="col-md-4">
+          <img class="img-responsive" src="http://placehold.it/400x250" alt="Third project">
+
+          <h3 class="text-uppercase">Third project</h3>
+
+          <p>Link</p>
+        </div>
+      </div>
+      <!-- Featured work content end -->
 
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
