Change images to use baconmockup.com instaed of placehold.it

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <!-- Header start -->
       <div class="row">
         <div class="col-md-6">
-          <img class="img-responsive img-circle logo" src="http://placehold.it/100x100" alt="Logo">
+          <img class="img-responsive img-circle logo" src="http://baconmockup.com/100/100" alt="Logo">
         </div>
         <div class="col-md-6 text-right">
           <h1>Tobias</h1>
@@ -41,7 +41,7 @@
       <!-- Banner start -->
       <div class="row">
         <div clsas="col-md-12">
-          <img class="img-responsive" src="http://placehold.it/1200x450" alt="Banner">
+          <img class="img-responsive" src="http://baconmockup.com/1200/450" alt="Banner">
         </div>
       </div>
       <!-- Banner end -->
@@ -57,7 +57,7 @@
       <!-- Featured work content start -->
       <div class="row">
         <div class="col-md-4">
-          <img class="img-responsive" src="http://placehold.it/400x250" alt="First project">
+          <img class="img-responsive" src="http://baconmockup.com/400/250" alt="First project">
 
           <h3 class="text-uppercase">First project</h3>
 
@@ -65,7 +65,7 @@
         </div>
 
         <div class="col-md-4">
-          <img class="img-responsive" src="http://placehold.it/400x250" alt="Second project">
+          <img class="img-responsive" src="http://baconmockup.com/400/250" alt="Second project">
 
           <h3 class="text-uppercase">Second project</h3>
 
@@ -73,7 +73,7 @@
         </div>
 
         <div class="col-md-4">
-          <img class="img-responsive" src="http://placehold.it/400x250" alt="Third project">
+          <img class="img-responsive" src="http://baconmockup.com/400/250" alt="Third project">
 
           <h3 class="text-uppercase">Third project</h3>
 
