Fix featured work content width bug

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
       <!-- Header-Content separator start --->
       <div class="row">
-        <div clas="col-md-12">
+        <div class="col-md-12">
           <hr>
         </div>
       </div>
@@ -40,7 +40,7 @@
 
       <!-- Banner start -->
       <div class="row">
-        <div clsas="col-md-12">
+        <div class="col-md-12">
           <img class="img-responsive" src="http://baconmockup.com/1200/450" alt="Banner">
         </div>
       </div>
