Center featured work images

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <!-- Featured work content start -->
       <div class="row">
         <div class="col-md-4">
-          <img class="img-responsive" src="http://baconmockup.com/400/250" alt="First project">
+          <img class="img-responsive featured-work-img" src="http://baconmockup.com/400/250" alt="First project">
 
           <h3 class="text-uppercase">First project</h3>
 
@@ -65,7 +65,7 @@
         </div>
 
         <div class="col-md-4">
-          <img class="img-responsive" src="http://baconmockup.com/400/250" alt="Second project">
+          <img class="img-responsive featured-work-img" src="http://baconmockup.com/400/250" alt="Second project">
 
           <h3 class="text-uppercase">Second project</h3>
 
@@ -73,7 +73,7 @@
         </div>
 
         <div class="col-md-4">
-          <img class="img-responsive" src="http://baconmockup.com/400/250" alt="Third project">
+          <img class="img-responsive featured-work-img" src="http://baconmockup.com/400/250" alt="Third project">
 
           <h3 class="text-uppercase">Third project</h3>
 
