Center featured work content text

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <!-- Featured work header end -->
 
       <!-- Featured work content start -->
-      <div class="row">
+      <div class="row text-center">
         <div class="col-md-4">
           <img class="img-responsive featured-work-img" src="http://baconmockup.com/400/250" alt="First project">
 
