--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-COMPATIBLE" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>Title</title>
+
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
 
@@ -26,11 +28,10 @@
           <h1>Tobias</h1>
           <h5>Student</h5>
         </div>
-        <hr>
       </div>
       <!-- Header end -->
 
-      <!-- Header-Content separator start --->
+      <!-- Header-Content separator start -->
       <div class="row">
         <div class="col-md-12">
           <hr>
