Create sample tablet layout

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         <div class="col-md-6">
           <img class="img-responsive img-circle logo" src="http://baconmockup.com/100/100" alt="Logo">
         </div>
-        <div class="col-md-6 text-right">
+        <div class="col-md-6 header-title">
           <h1>Tobias</h1>
-          <h5>Student</h5>
+          <h4>Student</h4>
         </div>
       </div>
       <!-- Header end -->
@@ -50,7 +50,7 @@
       <!-- Featured work header start -->
       <div class="row">
         <div class="col-md-12">
-          <h2 class="text-left">Featured Work</h2>
+          <h2 class="featured-work-title">Featured Work</h2>
         </div>
       </div>
       <!-- Featured work header end -->
