Create sample mobile layout

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     <div class="container">
       <!-- Header start -->
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-sm-6">
           <img class="img-responsive img-circle logo" src="http://baconmockup.com/100/100" alt="Logo">
         </div>
-        <div class="col-md-6 header-title">
+        <div class="col-sm-6 header-titles">
           <h1>Tobias</h1>
           <h4>Student</h4>
         </div>
@@ -42,7 +42,7 @@
       <!-- Banner start -->
       <div class="row">
         <div class="col-md-12">
-          <img class="img-responsive" src="http://baconmockup.com/1200/450" alt="Banner">
+          <img class="img-responsive banner" src="http://baconmockup.com/1200/450" alt="Banner">
         </div>
       </div>
       <!-- Banner end -->
