Change tablet layout to use 2 pictures a row

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-COMPATIBLE" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Title</title>
+    <title>Bacon</title>
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
@@ -57,7 +57,7 @@
 
       <!-- Featured work content start -->
       <div class="row text-center">
-        <div class="col-md-4">
+        <div class="col-sm-6 col-md-4">
           <img class="img-responsive featured-work-img" src="http://baconmockup.com/400/250" alt="First project">
 
           <h3 class="text-uppercase">First project</h3>
@@ -65,7 +65,7 @@
           <p>Link</p>
         </div>
 
-        <div class="col-md-4">
+        <div class="col-sm-6 col-md-4">
           <img class="img-responsive featured-work-img" src="http://baconmockup.com/400/250" alt="Second project">
 
           <h3 class="text-uppercase">Second project</h3>
@@ -73,15 +73,38 @@
           <p>Link</p>
         </div>
 
-        <div class="col-md-4">
+        <div class="col-sm-6 col-md-4">
           <img class="img-responsive featured-work-img" src="http://baconmockup.com/400/250" alt="Third project">
 
           <h3 class="text-uppercase">Third project</h3>
 
           <p>Link</p>
         </div>
+
+        <div class="col-sm-6 col-md-4">
+          <img class="img-responsive featured-work-img" src="http://baconmockup.com/400/250" alt="First project">
+
+          <h3 class="text-uppercase">First project</h3>
+
+          <p>Link</p>
+        </div>
+
+        <div class="col-sm-6 col-md-4">
+          <img class="img-responsive featured-work-img" src="http://baconmockup.com/400/250" alt="First project">
+
+          <h3 class="text-uppercase">First project</h3>
+
+          <p>Link</p>
+        </div>
+
+        <div class="col-sm-6 col-md-4">
+          <img class="img-responsive featured-work-img" src="http://baconmockup.com/400/250" alt="First project">
+
+          <h3 class="text-uppercase">First project</h3>
+
+          <p>Link</p>
+        </div>
       </div>
-      <!-- Featured work content end -->
 
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
