Change featured work descriptions

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <!-- Banner start -->
       <div class="row">
         <div class="col-md-12">
-          <img class="img-responsive banner" src="http://baconmockup.com/1200/450" alt="Banner">
+            <img class="img-responsive banner" src="http://baconmockup.com/1200/450" alt="Banner">
         </div>
       </div>
       <!-- Banner end -->
@@ -82,29 +82,30 @@
         </div>
 
         <div class="col-sm-6 col-md-4">
-          <img class="img-responsive featured-work-img" src="http://baconmockup.com/400/250" alt="First project">
+          <img class="img-responsive featured-work-img" src="http://baconmockup.com/400/250" alt="Fourth project">
 
-          <h3 class="text-uppercase">First project</h3>
-
-          <p>Link</p>
-        </div>
-
-        <div class="col-sm-6 col-md-4">
-          <img class="img-responsive featured-work-img" src="http://baconmockup.com/400/250" alt="First project">
-
-          <h3 class="text-uppercase">First project</h3>
+          <h3 class="text-uppercase">Fourth project</h3>
 
           <p>Link</p>
         </div>
 
         <div class="col-sm-6 col-md-4">
-          <img class="img-responsive featured-work-img" src="http://baconmockup.com/400/250" alt="First project">
+          <img class="img-responsive featured-work-img" src="http://baconmockup.com/400/250" alt="Fifth project">
 
-          <h3 class="text-uppercase">First project</h3>
+          <h3 class="text-uppercase">Fifth project</h3>
+
+          <p>Link</p>
+        </div>
+
+        <div class="col-sm-6 col-md-4">
+          <img class="img-responsive featured-work-img" src="http://baconmockup.com/400/250" alt="Sixth project">
+
+          <h3 class="text-uppercase">Sixth project</h3>
 
           <p>Link</p>
         </div>
       </div>
+      <!-- Featured work content end -->
 
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
