--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <title>Bacon</title>
 
+    <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
 
@@ -106,6 +107,14 @@
         </div>
       </div>
       <!-- Featured work content end -->
+
+      <!-- Icons start -->
+      <div class="row">
+        <div class="col-md-12 text-center">
+          <a class="ic fa fa-github fa-4x" href="https://github.com/tralalula" title="GitHub" target="_blank"></a>
+        </div>
+      </div>
+      <!-- Icons end -->
 
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
