--- a/index.html
+++ b/index.html
@@ -40,13 +40,47 @@
       </div>
       <!-- Header-content separator end -->
 
-      <!-- Banner start -->
+      <!-- Carousel start -->
       <div class="row">
         <div class="col-md-12">
-            <img class="img-responsive banner" src="http://baconmockup.com/1200/450" alt="Banner">
+          <div id="carousel" class="carousel slide" data-ride="carousel">
+            <!-- Indicators start -->
+            <ol class="carousel-indicators">
+              <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+              <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+              <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+            </ol>
+            <!-- Indicators end -->
+
+            <!-- Wrapper for slides start -->
+            <div class="carousel-inner" role="listbox">
+              <div class="item active">
+                <img src="http://baconmockup.com/1200/450" alt="Bacon image 1">
+              </div>
+              <div class="item">
+                <img src="http://baconmockup.com/1206/450" alt="Bacon image 2">
+              </div>
+              <div class="item">
+                <img src="http://baconmockup.com/1212/450" alt="Bacon image 2">
+              </div>
+            </div>
+            <!-- Wrapper for slides end -->
+
+            <!-- Controls start -->
+            <a class="left carousel-control" href="#carousel" role="button" data-slide="prev">
+              <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#carousel" role="button" data-slide="next">
+              <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+            <!-- Controls end -->
+          </div>
         </div>
       </div>
-      <!-- Banner end -->
+      <!-- Carousel end -->
+
 
       <!-- Featured work header start -->
       <div class="row">
